// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchResults when there are no hits it renders the default headings 1`] = `
<DocumentFragment>
  <h2
    class="MuiTypography-root MuiTypography-h1 css-o2w69a-MuiTypography-root"
  >
    Recipe Title for test query
  </h2>
  <h3
    class="MuiTypography-root MuiTypography-subtitle1 css-10wpov9-MuiTypography-root"
  >
    0 Recipes
  </h3>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
  />
</DocumentFragment>
`;

exports[`SearchResults when there is a query it renders the SearchResults 1`] = `
<DocumentFragment>
  <h2
    class="MuiTypography-root MuiTypography-h1 css-o2w69a-MuiTypography-root"
  >
    Recipe Title for test query
  </h2>
  <h3
    class="MuiTypography-root MuiTypography-subtitle1 css-10wpov9-MuiTypography-root"
  >
    3 Recipes
  </h3>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-4 css-11l5t4l-MuiGrid-root"
    >
      <div
        class="MuiPaper-root MuiPaper-outlined MuiPaper-rounded MuiCard-root recipe css-1v5z4dq-MuiPaper-root-MuiCard-root"
      >
        <a
          class="MuiButtonBase-root MuiCardActionArea-root css-b6lsxj-MuiButtonBase-root-MuiCardActionArea-root"
          href="/recipes/no-knead-bread"
          tabindex="0"
        >
          <div
            class="MuiCardMedia-root imageWrapper css-16cvb1l-MuiCardMedia-root"
          >
            <link
              as="image"
              fetchpriority="high"
              href="https://images.ctfassets.net/fo9qwg6zarbt/6HZDSm8AK4iQHr9v2UOGpq/17569d5be00441216338c7800e5ebc2c/no-knead-bread.JPG?w=400&h=267&fm=webp&q=75"
              imagesrcset="https://images.ctfassets.net/fo9qwg6zarbt/6HZDSm8AK4iQHr9v2UOGpq/17569d5be00441216338c7800e5ebc2c/no-knead-bread.JPG?w=400&h=267&fm=webp&q=75 1x, https://images.ctfassets.net/fo9qwg6zarbt/6HZDSm8AK4iQHr9v2UOGpq/17569d5be00441216338c7800e5ebc2c/no-knead-bread.JPG?w=800&h=534&fm=webp&q=75 2x"
              media="(min-width: 987px)"
              rel="preload"
              sizes="400px"
              type="image/webp"
            />
            <link
              as="image"
              fetchpriority="high"
              href="https://images.ctfassets.net/fo9qwg6zarbt/6HZDSm8AK4iQHr9v2UOGpq/17569d5be00441216338c7800e5ebc2c/no-knead-bread.JPG?w=400&h=267&fm=webp&q=75"
              imagesrcset="https://images.ctfassets.net/fo9qwg6zarbt/6HZDSm8AK4iQHr9v2UOGpq/17569d5be00441216338c7800e5ebc2c/no-knead-bread.JPG?w=300&h=200&fm=webp&q=75 1x, https://images.ctfassets.net/fo9qwg6zarbt/6HZDSm8AK4iQHr9v2UOGpq/17569d5be00441216338c7800e5ebc2c/no-knead-bread.JPG?w=600&h=400&fm=webp&q=75 2x"
              media="(min-width: 768px) and (max-width: 986px)"
              rel="preload"
              sizes="300px"
              type="image/webp"
            />
            <link
              as="image"
              fetchpriority="high"
              href="https://images.ctfassets.net/fo9qwg6zarbt/6HZDSm8AK4iQHr9v2UOGpq/17569d5be00441216338c7800e5ebc2c/no-knead-bread.JPG?w=400&h=267&fm=webp&q=75"
              imagesrcset="https://images.ctfassets.net/fo9qwg6zarbt/6HZDSm8AK4iQHr9v2UOGpq/17569d5be00441216338c7800e5ebc2c/no-knead-bread.JPG?w=400&h=267&fm=webp&q=75 1x, https://images.ctfassets.net/fo9qwg6zarbt/6HZDSm8AK4iQHr9v2UOGpq/17569d5be00441216338c7800e5ebc2c/no-knead-bread.JPG?w=800&h=534&fm=webp&q=75 2x"
              media="(min-width: 668px) and (max-width: 767px)"
              rel="preload"
              sizes="400px"
              type="image/webp"
            />
            <link
              as="image"
              fetchpriority="high"
              href="https://images.ctfassets.net/fo9qwg6zarbt/6HZDSm8AK4iQHr9v2UOGpq/17569d5be00441216338c7800e5ebc2c/no-knead-bread.JPG?w=400&h=267&fm=webp&q=75"
              imagesrcset="https://images.ctfassets.net/fo9qwg6zarbt/6HZDSm8AK4iQHr9v2UOGpq/17569d5be00441216338c7800e5ebc2c/no-knead-bread.JPG?w=300&h=200&fm=webp&q=75 1x, https://images.ctfassets.net/fo9qwg6zarbt/6HZDSm8AK4iQHr9v2UOGpq/17569d5be00441216338c7800e5ebc2c/no-knead-bread.JPG?w=600&h=400&fm=webp&q=75 2x"
              media="(min-width: 480px) and (max-width: 667px)"
              rel="preload"
              sizes="300px"
              type="image/webp"
            />
            <link
              as="image"
              fetchpriority="high"
              href="https://images.ctfassets.net/fo9qwg6zarbt/6HZDSm8AK4iQHr9v2UOGpq/17569d5be00441216338c7800e5ebc2c/no-knead-bread.JPG?w=400&h=267&fm=webp&q=75"
              imagesrcset="https://images.ctfassets.net/fo9qwg6zarbt/6HZDSm8AK4iQHr9v2UOGpq/17569d5be00441216338c7800e5ebc2c/no-knead-bread.JPG?w=500&h=334&fm=webp&q=75 1x, https://images.ctfassets.net/fo9qwg6zarbt/6HZDSm8AK4iQHr9v2UOGpq/17569d5be00441216338c7800e5ebc2c/no-knead-bread.JPG?w=1000&h=668&fm=webp&q=75 2x"
              media="(min-width: 434px) and (max-width: 479px)"
              rel="preload"
              sizes="500px"
              type="image/webp"
            />
            <link
              as="image"
              fetchpriority="high"
              href="https://images.ctfassets.net/fo9qwg6zarbt/6HZDSm8AK4iQHr9v2UOGpq/17569d5be00441216338c7800e5ebc2c/no-knead-bread.JPG?w=400&h=267&fm=webp&q=75"
              imagesrcset="https://images.ctfassets.net/fo9qwg6zarbt/6HZDSm8AK4iQHr9v2UOGpq/17569d5be00441216338c7800e5ebc2c/no-knead-bread.JPG?w=400&h=267&fm=webp&q=75 1x, https://images.ctfassets.net/fo9qwg6zarbt/6HZDSm8AK4iQHr9v2UOGpq/17569d5be00441216338c7800e5ebc2c/no-knead-bread.JPG?w=800&h=534&fm=webp&q=75 2x"
              media="(min-width: 335px) and (max-width: 433px)"
              rel="preload"
              sizes="400px"
              type="image/webp"
            />
            <link
              as="image"
              fetchpriority="high"
              href="https://images.ctfassets.net/fo9qwg6zarbt/6HZDSm8AK4iQHr9v2UOGpq/17569d5be00441216338c7800e5ebc2c/no-knead-bread.JPG?w=400&h=267&fm=webp&q=75"
              imagesrcset="https://images.ctfassets.net/fo9qwg6zarbt/6HZDSm8AK4iQHr9v2UOGpq/17569d5be00441216338c7800e5ebc2c/no-knead-bread.JPG?w=300&h=200&fm=webp&q=75 1x, https://images.ctfassets.net/fo9qwg6zarbt/6HZDSm8AK4iQHr9v2UOGpq/17569d5be00441216338c7800e5ebc2c/no-knead-bread.JPG?w=600&h=400&fm=webp&q=75 2x"
              media="(max-width: 334px)"
              rel="preload"
              sizes="300px"
              type="image/webp"
            />
            <picture>
              <source
                media="(min-width: 987px)"
                sizes="400px"
                srcset="https://images.ctfassets.net/fo9qwg6zarbt/6HZDSm8AK4iQHr9v2UOGpq/17569d5be00441216338c7800e5ebc2c/no-knead-bread.JPG?w=400&h=267&fm=webp&q=75 1x, https://images.ctfassets.net/fo9qwg6zarbt/6HZDSm8AK4iQHr9v2UOGpq/17569d5be00441216338c7800e5ebc2c/no-knead-bread.JPG?w=800&h=534&fm=webp&q=75 2x"
              />
              <source
                media="(min-width: 768px) and (max-width: 986px)"
                sizes="300px"
                srcset="https://images.ctfassets.net/fo9qwg6zarbt/6HZDSm8AK4iQHr9v2UOGpq/17569d5be00441216338c7800e5ebc2c/no-knead-bread.JPG?w=300&h=200&fm=webp&q=75 1x, https://images.ctfassets.net/fo9qwg6zarbt/6HZDSm8AK4iQHr9v2UOGpq/17569d5be00441216338c7800e5ebc2c/no-knead-bread.JPG?w=600&h=400&fm=webp&q=75 2x"
              />
              <source
                media="(min-width: 668px) and (max-width: 767px)"
                sizes="400px"
                srcset="https://images.ctfassets.net/fo9qwg6zarbt/6HZDSm8AK4iQHr9v2UOGpq/17569d5be00441216338c7800e5ebc2c/no-knead-bread.JPG?w=400&h=267&fm=webp&q=75 1x, https://images.ctfassets.net/fo9qwg6zarbt/6HZDSm8AK4iQHr9v2UOGpq/17569d5be00441216338c7800e5ebc2c/no-knead-bread.JPG?w=800&h=534&fm=webp&q=75 2x"
              />
              <source
                media="(min-width: 480px) and (max-width: 667px)"
                sizes="300px"
                srcset="https://images.ctfassets.net/fo9qwg6zarbt/6HZDSm8AK4iQHr9v2UOGpq/17569d5be00441216338c7800e5ebc2c/no-knead-bread.JPG?w=300&h=200&fm=webp&q=75 1x, https://images.ctfassets.net/fo9qwg6zarbt/6HZDSm8AK4iQHr9v2UOGpq/17569d5be00441216338c7800e5ebc2c/no-knead-bread.JPG?w=600&h=400&fm=webp&q=75 2x"
              />
              <source
                media="(min-width: 434px) and (max-width: 479px)"
                sizes="500px"
                srcset="https://images.ctfassets.net/fo9qwg6zarbt/6HZDSm8AK4iQHr9v2UOGpq/17569d5be00441216338c7800e5ebc2c/no-knead-bread.JPG?w=500&h=334&fm=webp&q=75 1x, https://images.ctfassets.net/fo9qwg6zarbt/6HZDSm8AK4iQHr9v2UOGpq/17569d5be00441216338c7800e5ebc2c/no-knead-bread.JPG?w=1000&h=668&fm=webp&q=75 2x"
              />
              <source
                media="(min-width: 335px) and (max-width: 433px)"
                sizes="400px"
                srcset="https://images.ctfassets.net/fo9qwg6zarbt/6HZDSm8AK4iQHr9v2UOGpq/17569d5be00441216338c7800e5ebc2c/no-knead-bread.JPG?w=400&h=267&fm=webp&q=75 1x, https://images.ctfassets.net/fo9qwg6zarbt/6HZDSm8AK4iQHr9v2UOGpq/17569d5be00441216338c7800e5ebc2c/no-knead-bread.JPG?w=800&h=534&fm=webp&q=75 2x"
              />
              <source
                media="(max-width: 334px)"
                sizes="300px"
                srcset="https://images.ctfassets.net/fo9qwg6zarbt/6HZDSm8AK4iQHr9v2UOGpq/17569d5be00441216338c7800e5ebc2c/no-knead-bread.JPG?w=300&h=200&fm=webp&q=75 1x, https://images.ctfassets.net/fo9qwg6zarbt/6HZDSm8AK4iQHr9v2UOGpq/17569d5be00441216338c7800e5ebc2c/no-knead-bread.JPG?w=600&h=400&fm=webp&q=75 2x"
              />
              <img
                alt="Loaf of no-knead bread cooling on a wire baking rack."
                class="dynamicImage"
                fetchpriority="high"
                height="267"
                loading="eager"
                src="https://images.ctfassets.net/fo9qwg6zarbt/6HZDSm8AK4iQHr9v2UOGpq/17569d5be00441216338c7800e5ebc2c/no-knead-bread.JPG?w=800&h=534&fm=webp&q=75"
                width="400"
              />
            </picture>
          </div>
          <div
            class="MuiCardHeader-root css-185gdzj-MuiCardHeader-root"
          >
            <div
              class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
            >
              <span
                class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1qvr50w-MuiTypography-root"
              >
                No-Knead Bread
              </span>
              <span
                class="MuiTypography-root MuiTypography-body1 MuiCardHeader-subheader css-nrdprl-MuiTypography-root"
              >
                Baking
              </span>
            </div>
          </div>
          <div
            class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
          >
            <p
              class="MuiTypography-root MuiTypography-body2 abstract css-e784if-MuiTypography-root"
            >
              No-knead bread using instant yeast and a dutch oven or covered ceramic bread pan for a classic, crispy crust.
            </p>
          </div>
          <span
            class="MuiCardActionArea-focusHighlight css-1v2exvi-MuiCardActionArea-focusHighlight"
          />
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </a>
        <div
          class="MuiCardActions-root MuiCardActions-spacing css-1t6e9jv-MuiCardActions-root"
        >
          <div
            class="tagButtons css-m69qwo-MuiStack-root"
            data-testid="tag-buttons"
          >
            <a
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall tag css-1k23hlb-MuiButtonBase-root-MuiButton-root"
              href="/tags/baking"
              role="button"
              tabindex="0"
            >
              Baking
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </a>
            <a
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall tag css-1k23hlb-MuiButtonBase-root-MuiButton-root"
              href="/tags/bread"
              role="button"
              tabindex="0"
            >
              Bread
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-4 css-11l5t4l-MuiGrid-root"
    >
      <div
        class="MuiPaper-root MuiPaper-outlined MuiPaper-rounded MuiCard-root recipe css-1v5z4dq-MuiPaper-root-MuiCard-root"
      >
        <a
          class="MuiButtonBase-root MuiCardActionArea-root css-b6lsxj-MuiButtonBase-root-MuiCardActionArea-root"
          href="/recipes/biscuits"
          tabindex="0"
        >
          <div
            class="MuiCardMedia-root imageWrapper css-16cvb1l-MuiCardMedia-root"
          >
            <link
              as="image"
              fetchpriority="high"
              href="https://images.ctfassets.net/fo9qwg6zarbt/B6C4D23gXNDNfGVrxb1DK/9d8e62c1faf660f7e542eed14e044b57/biscuits.jpg?w=400&h=267&fm=webp&q=75"
              imagesrcset="https://images.ctfassets.net/fo9qwg6zarbt/B6C4D23gXNDNfGVrxb1DK/9d8e62c1faf660f7e542eed14e044b57/biscuits.jpg?w=400&h=267&fm=webp&q=75 1x, https://images.ctfassets.net/fo9qwg6zarbt/B6C4D23gXNDNfGVrxb1DK/9d8e62c1faf660f7e542eed14e044b57/biscuits.jpg?w=800&h=534&fm=webp&q=75 2x"
              media="(min-width: 987px)"
              rel="preload"
              sizes="400px"
              type="image/webp"
            />
            <link
              as="image"
              fetchpriority="high"
              href="https://images.ctfassets.net/fo9qwg6zarbt/B6C4D23gXNDNfGVrxb1DK/9d8e62c1faf660f7e542eed14e044b57/biscuits.jpg?w=400&h=267&fm=webp&q=75"
              imagesrcset="https://images.ctfassets.net/fo9qwg6zarbt/B6C4D23gXNDNfGVrxb1DK/9d8e62c1faf660f7e542eed14e044b57/biscuits.jpg?w=300&h=200&fm=webp&q=75 1x, https://images.ctfassets.net/fo9qwg6zarbt/B6C4D23gXNDNfGVrxb1DK/9d8e62c1faf660f7e542eed14e044b57/biscuits.jpg?w=600&h=400&fm=webp&q=75 2x"
              media="(min-width: 768px) and (max-width: 986px)"
              rel="preload"
              sizes="300px"
              type="image/webp"
            />
            <link
              as="image"
              fetchpriority="high"
              href="https://images.ctfassets.net/fo9qwg6zarbt/B6C4D23gXNDNfGVrxb1DK/9d8e62c1faf660f7e542eed14e044b57/biscuits.jpg?w=400&h=267&fm=webp&q=75"
              imagesrcset="https://images.ctfassets.net/fo9qwg6zarbt/B6C4D23gXNDNfGVrxb1DK/9d8e62c1faf660f7e542eed14e044b57/biscuits.jpg?w=400&h=267&fm=webp&q=75 1x, https://images.ctfassets.net/fo9qwg6zarbt/B6C4D23gXNDNfGVrxb1DK/9d8e62c1faf660f7e542eed14e044b57/biscuits.jpg?w=800&h=534&fm=webp&q=75 2x"
              media="(min-width: 668px) and (max-width: 767px)"
              rel="preload"
              sizes="400px"
              type="image/webp"
            />
            <link
              as="image"
              fetchpriority="high"
              href="https://images.ctfassets.net/fo9qwg6zarbt/B6C4D23gXNDNfGVrxb1DK/9d8e62c1faf660f7e542eed14e044b57/biscuits.jpg?w=400&h=267&fm=webp&q=75"
              imagesrcset="https://images.ctfassets.net/fo9qwg6zarbt/B6C4D23gXNDNfGVrxb1DK/9d8e62c1faf660f7e542eed14e044b57/biscuits.jpg?w=300&h=200&fm=webp&q=75 1x, https://images.ctfassets.net/fo9qwg6zarbt/B6C4D23gXNDNfGVrxb1DK/9d8e62c1faf660f7e542eed14e044b57/biscuits.jpg?w=600&h=400&fm=webp&q=75 2x"
              media="(min-width: 480px) and (max-width: 667px)"
              rel="preload"
              sizes="300px"
              type="image/webp"
            />
            <link
              as="image"
              fetchpriority="high"
              href="https://images.ctfassets.net/fo9qwg6zarbt/B6C4D23gXNDNfGVrxb1DK/9d8e62c1faf660f7e542eed14e044b57/biscuits.jpg?w=400&h=267&fm=webp&q=75"
              imagesrcset="https://images.ctfassets.net/fo9qwg6zarbt/B6C4D23gXNDNfGVrxb1DK/9d8e62c1faf660f7e542eed14e044b57/biscuits.jpg?w=500&h=334&fm=webp&q=75 1x, https://images.ctfassets.net/fo9qwg6zarbt/B6C4D23gXNDNfGVrxb1DK/9d8e62c1faf660f7e542eed14e044b57/biscuits.jpg?w=1000&h=668&fm=webp&q=75 2x"
              media="(min-width: 434px) and (max-width: 479px)"
              rel="preload"
              sizes="500px"
              type="image/webp"
            />
            <link
              as="image"
              fetchpriority="high"
              href="https://images.ctfassets.net/fo9qwg6zarbt/B6C4D23gXNDNfGVrxb1DK/9d8e62c1faf660f7e542eed14e044b57/biscuits.jpg?w=400&h=267&fm=webp&q=75"
              imagesrcset="https://images.ctfassets.net/fo9qwg6zarbt/B6C4D23gXNDNfGVrxb1DK/9d8e62c1faf660f7e542eed14e044b57/biscuits.jpg?w=400&h=267&fm=webp&q=75 1x, https://images.ctfassets.net/fo9qwg6zarbt/B6C4D23gXNDNfGVrxb1DK/9d8e62c1faf660f7e542eed14e044b57/biscuits.jpg?w=800&h=534&fm=webp&q=75 2x"
              media="(min-width: 335px) and (max-width: 433px)"
              rel="preload"
              sizes="400px"
              type="image/webp"
            />
            <link
              as="image"
              fetchpriority="high"
              href="https://images.ctfassets.net/fo9qwg6zarbt/B6C4D23gXNDNfGVrxb1DK/9d8e62c1faf660f7e542eed14e044b57/biscuits.jpg?w=400&h=267&fm=webp&q=75"
              imagesrcset="https://images.ctfassets.net/fo9qwg6zarbt/B6C4D23gXNDNfGVrxb1DK/9d8e62c1faf660f7e542eed14e044b57/biscuits.jpg?w=300&h=200&fm=webp&q=75 1x, https://images.ctfassets.net/fo9qwg6zarbt/B6C4D23gXNDNfGVrxb1DK/9d8e62c1faf660f7e542eed14e044b57/biscuits.jpg?w=600&h=400&fm=webp&q=75 2x"
              media="(max-width: 334px)"
              rel="preload"
              sizes="300px"
              type="image/webp"
            />
            <picture>
              <source
                media="(min-width: 987px)"
                sizes="400px"
                srcset="https://images.ctfassets.net/fo9qwg6zarbt/B6C4D23gXNDNfGVrxb1DK/9d8e62c1faf660f7e542eed14e044b57/biscuits.jpg?w=400&h=267&fm=webp&q=75 1x, https://images.ctfassets.net/fo9qwg6zarbt/B6C4D23gXNDNfGVrxb1DK/9d8e62c1faf660f7e542eed14e044b57/biscuits.jpg?w=800&h=534&fm=webp&q=75 2x"
              />
              <source
                media="(min-width: 768px) and (max-width: 986px)"
                sizes="300px"
                srcset="https://images.ctfassets.net/fo9qwg6zarbt/B6C4D23gXNDNfGVrxb1DK/9d8e62c1faf660f7e542eed14e044b57/biscuits.jpg?w=300&h=200&fm=webp&q=75 1x, https://images.ctfassets.net/fo9qwg6zarbt/B6C4D23gXNDNfGVrxb1DK/9d8e62c1faf660f7e542eed14e044b57/biscuits.jpg?w=600&h=400&fm=webp&q=75 2x"
              />
              <source
                media="(min-width: 668px) and (max-width: 767px)"
                sizes="400px"
                srcset="https://images.ctfassets.net/fo9qwg6zarbt/B6C4D23gXNDNfGVrxb1DK/9d8e62c1faf660f7e542eed14e044b57/biscuits.jpg?w=400&h=267&fm=webp&q=75 1x, https://images.ctfassets.net/fo9qwg6zarbt/B6C4D23gXNDNfGVrxb1DK/9d8e62c1faf660f7e542eed14e044b57/biscuits.jpg?w=800&h=534&fm=webp&q=75 2x"
              />
              <source
                media="(min-width: 480px) and (max-width: 667px)"
                sizes="300px"
                srcset="https://images.ctfassets.net/fo9qwg6zarbt/B6C4D23gXNDNfGVrxb1DK/9d8e62c1faf660f7e542eed14e044b57/biscuits.jpg?w=300&h=200&fm=webp&q=75 1x, https://images.ctfassets.net/fo9qwg6zarbt/B6C4D23gXNDNfGVrxb1DK/9d8e62c1faf660f7e542eed14e044b57/biscuits.jpg?w=600&h=400&fm=webp&q=75 2x"
              />
              <source
                media="(min-width: 434px) and (max-width: 479px)"
                sizes="500px"
                srcset="https://images.ctfassets.net/fo9qwg6zarbt/B6C4D23gXNDNfGVrxb1DK/9d8e62c1faf660f7e542eed14e044b57/biscuits.jpg?w=500&h=334&fm=webp&q=75 1x, https://images.ctfassets.net/fo9qwg6zarbt/B6C4D23gXNDNfGVrxb1DK/9d8e62c1faf660f7e542eed14e044b57/biscuits.jpg?w=1000&h=668&fm=webp&q=75 2x"
              />
              <source
                media="(min-width: 335px) and (max-width: 433px)"
                sizes="400px"
                srcset="https://images.ctfassets.net/fo9qwg6zarbt/B6C4D23gXNDNfGVrxb1DK/9d8e62c1faf660f7e542eed14e044b57/biscuits.jpg?w=400&h=267&fm=webp&q=75 1x, https://images.ctfassets.net/fo9qwg6zarbt/B6C4D23gXNDNfGVrxb1DK/9d8e62c1faf660f7e542eed14e044b57/biscuits.jpg?w=800&h=534&fm=webp&q=75 2x"
              />
              <source
                media="(max-width: 334px)"
                sizes="300px"
                srcset="https://images.ctfassets.net/fo9qwg6zarbt/B6C4D23gXNDNfGVrxb1DK/9d8e62c1faf660f7e542eed14e044b57/biscuits.jpg?w=300&h=200&fm=webp&q=75 1x, https://images.ctfassets.net/fo9qwg6zarbt/B6C4D23gXNDNfGVrxb1DK/9d8e62c1faf660f7e542eed14e044b57/biscuits.jpg?w=600&h=400&fm=webp&q=75 2x"
              />
              <img
                alt="A batch of baking soda biscuits on a parchment-lined baking sheet."
                class="dynamicImage"
                fetchpriority="high"
                height="267"
                loading="eager"
                src="https://images.ctfassets.net/fo9qwg6zarbt/B6C4D23gXNDNfGVrxb1DK/9d8e62c1faf660f7e542eed14e044b57/biscuits.jpg?w=800&h=534&fm=webp&q=75"
                width="400"
              />
            </picture>
          </div>
          <div
            class="MuiCardHeader-root css-185gdzj-MuiCardHeader-root"
          >
            <div
              class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
            >
              <span
                class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1qvr50w-MuiTypography-root"
              >
                Biscuits
              </span>
              <span
                class="MuiTypography-root MuiTypography-body1 MuiCardHeader-subheader css-nrdprl-MuiTypography-root"
              >
                Baking
              </span>
            </div>
          </div>
          <div
            class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
          >
            <p
              class="MuiTypography-root MuiTypography-body2 abstract css-e784if-MuiTypography-root"
            >
              Traditional baking powder biscuits that use grated frozen butter and folded dough to give the biscuits a soft, flaky texture.
            </p>
          </div>
          <span
            class="MuiCardActionArea-focusHighlight css-1v2exvi-MuiCardActionArea-focusHighlight"
          />
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </a>
        <div
          class="MuiCardActions-root MuiCardActions-spacing css-1t6e9jv-MuiCardActions-root"
        >
          <div
            class="tagButtons css-m69qwo-MuiStack-root"
            data-testid="tag-buttons"
          >
            <a
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall tag css-1k23hlb-MuiButtonBase-root-MuiButton-root"
              href="/tags/baking"
              role="button"
              tabindex="0"
            >
              Baking
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </a>
            <a
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall tag css-1k23hlb-MuiButtonBase-root-MuiButton-root"
              href="/tags/biscuits"
              role="button"
              tabindex="0"
            >
              Biscuits
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </a>
            <a
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall tag css-1k23hlb-MuiButtonBase-root-MuiButton-root"
              href="/tags/breakfast"
              role="button"
              tabindex="0"
            >
              Breakfast
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </a>
            <a
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall tag css-1k23hlb-MuiButtonBase-root-MuiButton-root"
              href="/tags/southern"
              role="button"
              tabindex="0"
            >
              Southern
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-4 css-11l5t4l-MuiGrid-root"
    >
      <div
        class="MuiPaper-root MuiPaper-outlined MuiPaper-rounded MuiCard-root recipe css-1v5z4dq-MuiPaper-root-MuiCard-root"
      >
        <a
          class="MuiButtonBase-root MuiCardActionArea-root css-b6lsxj-MuiButtonBase-root-MuiCardActionArea-root"
          href="/recipes/no-knead-olive-bread"
          tabindex="0"
        >
          <div
            class="MuiCardMedia-root imageWrapper css-16cvb1l-MuiCardMedia-root"
          >
            <link
              as="image"
              fetchpriority="high"
              href="https://images.ctfassets.net/fo9qwg6zarbt/2rUa4IhfkLtRRBmHS6ihcD/e953337e00d1eba9551b15e7eee18229/olive-bread.JPG?w=400&h=267&fm=webp&q=75"
              imagesrcset="https://images.ctfassets.net/fo9qwg6zarbt/2rUa4IhfkLtRRBmHS6ihcD/e953337e00d1eba9551b15e7eee18229/olive-bread.JPG?w=400&h=267&fm=webp&q=75 1x, https://images.ctfassets.net/fo9qwg6zarbt/2rUa4IhfkLtRRBmHS6ihcD/e953337e00d1eba9551b15e7eee18229/olive-bread.JPG?w=800&h=534&fm=webp&q=75 2x"
              media="(min-width: 987px)"
              rel="preload"
              sizes="400px"
              type="image/webp"
            />
            <link
              as="image"
              fetchpriority="high"
              href="https://images.ctfassets.net/fo9qwg6zarbt/2rUa4IhfkLtRRBmHS6ihcD/e953337e00d1eba9551b15e7eee18229/olive-bread.JPG?w=400&h=267&fm=webp&q=75"
              imagesrcset="https://images.ctfassets.net/fo9qwg6zarbt/2rUa4IhfkLtRRBmHS6ihcD/e953337e00d1eba9551b15e7eee18229/olive-bread.JPG?w=300&h=200&fm=webp&q=75 1x, https://images.ctfassets.net/fo9qwg6zarbt/2rUa4IhfkLtRRBmHS6ihcD/e953337e00d1eba9551b15e7eee18229/olive-bread.JPG?w=600&h=400&fm=webp&q=75 2x"
              media="(min-width: 768px) and (max-width: 986px)"
              rel="preload"
              sizes="300px"
              type="image/webp"
            />
            <link
              as="image"
              fetchpriority="high"
              href="https://images.ctfassets.net/fo9qwg6zarbt/2rUa4IhfkLtRRBmHS6ihcD/e953337e00d1eba9551b15e7eee18229/olive-bread.JPG?w=400&h=267&fm=webp&q=75"
              imagesrcset="https://images.ctfassets.net/fo9qwg6zarbt/2rUa4IhfkLtRRBmHS6ihcD/e953337e00d1eba9551b15e7eee18229/olive-bread.JPG?w=400&h=267&fm=webp&q=75 1x, https://images.ctfassets.net/fo9qwg6zarbt/2rUa4IhfkLtRRBmHS6ihcD/e953337e00d1eba9551b15e7eee18229/olive-bread.JPG?w=800&h=534&fm=webp&q=75 2x"
              media="(min-width: 668px) and (max-width: 767px)"
              rel="preload"
              sizes="400px"
              type="image/webp"
            />
            <link
              as="image"
              fetchpriority="high"
              href="https://images.ctfassets.net/fo9qwg6zarbt/2rUa4IhfkLtRRBmHS6ihcD/e953337e00d1eba9551b15e7eee18229/olive-bread.JPG?w=400&h=267&fm=webp&q=75"
              imagesrcset="https://images.ctfassets.net/fo9qwg6zarbt/2rUa4IhfkLtRRBmHS6ihcD/e953337e00d1eba9551b15e7eee18229/olive-bread.JPG?w=300&h=200&fm=webp&q=75 1x, https://images.ctfassets.net/fo9qwg6zarbt/2rUa4IhfkLtRRBmHS6ihcD/e953337e00d1eba9551b15e7eee18229/olive-bread.JPG?w=600&h=400&fm=webp&q=75 2x"
              media="(min-width: 480px) and (max-width: 667px)"
              rel="preload"
              sizes="300px"
              type="image/webp"
            />
            <link
              as="image"
              fetchpriority="high"
              href="https://images.ctfassets.net/fo9qwg6zarbt/2rUa4IhfkLtRRBmHS6ihcD/e953337e00d1eba9551b15e7eee18229/olive-bread.JPG?w=400&h=267&fm=webp&q=75"
              imagesrcset="https://images.ctfassets.net/fo9qwg6zarbt/2rUa4IhfkLtRRBmHS6ihcD/e953337e00d1eba9551b15e7eee18229/olive-bread.JPG?w=500&h=334&fm=webp&q=75 1x, https://images.ctfassets.net/fo9qwg6zarbt/2rUa4IhfkLtRRBmHS6ihcD/e953337e00d1eba9551b15e7eee18229/olive-bread.JPG?w=1000&h=668&fm=webp&q=75 2x"
              media="(min-width: 434px) and (max-width: 479px)"
              rel="preload"
              sizes="500px"
              type="image/webp"
            />
            <link
              as="image"
              fetchpriority="high"
              href="https://images.ctfassets.net/fo9qwg6zarbt/2rUa4IhfkLtRRBmHS6ihcD/e953337e00d1eba9551b15e7eee18229/olive-bread.JPG?w=400&h=267&fm=webp&q=75"
              imagesrcset="https://images.ctfassets.net/fo9qwg6zarbt/2rUa4IhfkLtRRBmHS6ihcD/e953337e00d1eba9551b15e7eee18229/olive-bread.JPG?w=400&h=267&fm=webp&q=75 1x, https://images.ctfassets.net/fo9qwg6zarbt/2rUa4IhfkLtRRBmHS6ihcD/e953337e00d1eba9551b15e7eee18229/olive-bread.JPG?w=800&h=534&fm=webp&q=75 2x"
              media="(min-width: 335px) and (max-width: 433px)"
              rel="preload"
              sizes="400px"
              type="image/webp"
            />
            <link
              as="image"
              fetchpriority="high"
              href="https://images.ctfassets.net/fo9qwg6zarbt/2rUa4IhfkLtRRBmHS6ihcD/e953337e00d1eba9551b15e7eee18229/olive-bread.JPG?w=400&h=267&fm=webp&q=75"
              imagesrcset="https://images.ctfassets.net/fo9qwg6zarbt/2rUa4IhfkLtRRBmHS6ihcD/e953337e00d1eba9551b15e7eee18229/olive-bread.JPG?w=300&h=200&fm=webp&q=75 1x, https://images.ctfassets.net/fo9qwg6zarbt/2rUa4IhfkLtRRBmHS6ihcD/e953337e00d1eba9551b15e7eee18229/olive-bread.JPG?w=600&h=400&fm=webp&q=75 2x"
              media="(max-width: 334px)"
              rel="preload"
              sizes="300px"
              type="image/webp"
            />
            <picture>
              <source
                media="(min-width: 987px)"
                sizes="400px"
                srcset="https://images.ctfassets.net/fo9qwg6zarbt/2rUa4IhfkLtRRBmHS6ihcD/e953337e00d1eba9551b15e7eee18229/olive-bread.JPG?w=400&h=267&fm=webp&q=75 1x, https://images.ctfassets.net/fo9qwg6zarbt/2rUa4IhfkLtRRBmHS6ihcD/e953337e00d1eba9551b15e7eee18229/olive-bread.JPG?w=800&h=534&fm=webp&q=75 2x"
              />
              <source
                media="(min-width: 768px) and (max-width: 986px)"
                sizes="300px"
                srcset="https://images.ctfassets.net/fo9qwg6zarbt/2rUa4IhfkLtRRBmHS6ihcD/e953337e00d1eba9551b15e7eee18229/olive-bread.JPG?w=300&h=200&fm=webp&q=75 1x, https://images.ctfassets.net/fo9qwg6zarbt/2rUa4IhfkLtRRBmHS6ihcD/e953337e00d1eba9551b15e7eee18229/olive-bread.JPG?w=600&h=400&fm=webp&q=75 2x"
              />
              <source
                media="(min-width: 668px) and (max-width: 767px)"
                sizes="400px"
                srcset="https://images.ctfassets.net/fo9qwg6zarbt/2rUa4IhfkLtRRBmHS6ihcD/e953337e00d1eba9551b15e7eee18229/olive-bread.JPG?w=400&h=267&fm=webp&q=75 1x, https://images.ctfassets.net/fo9qwg6zarbt/2rUa4IhfkLtRRBmHS6ihcD/e953337e00d1eba9551b15e7eee18229/olive-bread.JPG?w=800&h=534&fm=webp&q=75 2x"
              />
              <source
                media="(min-width: 480px) and (max-width: 667px)"
                sizes="300px"
                srcset="https://images.ctfassets.net/fo9qwg6zarbt/2rUa4IhfkLtRRBmHS6ihcD/e953337e00d1eba9551b15e7eee18229/olive-bread.JPG?w=300&h=200&fm=webp&q=75 1x, https://images.ctfassets.net/fo9qwg6zarbt/2rUa4IhfkLtRRBmHS6ihcD/e953337e00d1eba9551b15e7eee18229/olive-bread.JPG?w=600&h=400&fm=webp&q=75 2x"
              />
              <source
                media="(min-width: 434px) and (max-width: 479px)"
                sizes="500px"
                srcset="https://images.ctfassets.net/fo9qwg6zarbt/2rUa4IhfkLtRRBmHS6ihcD/e953337e00d1eba9551b15e7eee18229/olive-bread.JPG?w=500&h=334&fm=webp&q=75 1x, https://images.ctfassets.net/fo9qwg6zarbt/2rUa4IhfkLtRRBmHS6ihcD/e953337e00d1eba9551b15e7eee18229/olive-bread.JPG?w=1000&h=668&fm=webp&q=75 2x"
              />
              <source
                media="(min-width: 335px) and (max-width: 433px)"
                sizes="400px"
                srcset="https://images.ctfassets.net/fo9qwg6zarbt/2rUa4IhfkLtRRBmHS6ihcD/e953337e00d1eba9551b15e7eee18229/olive-bread.JPG?w=400&h=267&fm=webp&q=75 1x, https://images.ctfassets.net/fo9qwg6zarbt/2rUa4IhfkLtRRBmHS6ihcD/e953337e00d1eba9551b15e7eee18229/olive-bread.JPG?w=800&h=534&fm=webp&q=75 2x"
              />
              <source
                media="(max-width: 334px)"
                sizes="300px"
                srcset="https://images.ctfassets.net/fo9qwg6zarbt/2rUa4IhfkLtRRBmHS6ihcD/e953337e00d1eba9551b15e7eee18229/olive-bread.JPG?w=300&h=200&fm=webp&q=75 1x, https://images.ctfassets.net/fo9qwg6zarbt/2rUa4IhfkLtRRBmHS6ihcD/e953337e00d1eba9551b15e7eee18229/olive-bread.JPG?w=600&h=400&fm=webp&q=75 2x"
              />
              <img
                alt="Loaf of no-knead olive bread"
                class="dynamicImage"
                fetchpriority="high"
                height="267"
                loading="eager"
                src="https://images.ctfassets.net/fo9qwg6zarbt/2rUa4IhfkLtRRBmHS6ihcD/e953337e00d1eba9551b15e7eee18229/olive-bread.JPG?w=800&h=534&fm=webp&q=75"
                width="400"
              />
            </picture>
          </div>
          <div
            class="MuiCardHeader-root css-185gdzj-MuiCardHeader-root"
          >
            <div
              class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
            >
              <span
                class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1qvr50w-MuiTypography-root"
              >
                No-Knead Olive Bread
              </span>
              <span
                class="MuiTypography-root MuiTypography-body1 MuiCardHeader-subheader css-nrdprl-MuiTypography-root"
              >
                Baking
              </span>
            </div>
          </div>
          <div
            class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
          >
            <p
              class="MuiTypography-root MuiTypography-body2 abstract css-e784if-MuiTypography-root"
            >
              A savory variation of no-knead bread with the addition of olives, garlic, and rosemary to give it a Mediterranean twist.
            </p>
          </div>
          <span
            class="MuiCardActionArea-focusHighlight css-1v2exvi-MuiCardActionArea-focusHighlight"
          />
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </a>
        <div
          class="MuiCardActions-root MuiCardActions-spacing css-1t6e9jv-MuiCardActions-root"
        >
          <div
            class="tagButtons css-m69qwo-MuiStack-root"
            data-testid="tag-buttons"
          >
            <a
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall tag css-1k23hlb-MuiButtonBase-root-MuiButton-root"
              href="/tags/baking"
              role="button"
              tabindex="0"
            >
              Baking
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </a>
            <a
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall tag css-1k23hlb-MuiButtonBase-root-MuiButton-root"
              href="/tags/bread"
              role="button"
              tabindex="0"
            >
              Bread
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </a>
            <a
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall tag css-1k23hlb-MuiButtonBase-root-MuiButton-root"
              href="/tags/olives"
              role="button"
              tabindex="0"
            >
              Olives
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </a>
            <a
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall tag css-1k23hlb-MuiButtonBase-root-MuiButton-root"
              href="/tags/mediterranean"
              role="button"
              tabindex="0"
            >
              Mediterranean
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchResults when there is no query it renders the SearchResults 1`] = `
<DocumentFragment>
  <h2
    class="MuiTypography-root MuiTypography-h1 css-o2w69a-MuiTypography-root"
  >
    Recipe Title
  </h2>
  <h3
    class="MuiTypography-root MuiTypography-subtitle1 css-10wpov9-MuiTypography-root"
  >
    3 Recipes
  </h3>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-4 css-11l5t4l-MuiGrid-root"
    >
      <div
        class="MuiPaper-root MuiPaper-outlined MuiPaper-rounded MuiCard-root recipe css-1v5z4dq-MuiPaper-root-MuiCard-root"
      >
        <a
          class="MuiButtonBase-root MuiCardActionArea-root css-b6lsxj-MuiButtonBase-root-MuiCardActionArea-root"
          href="/recipes/biscuits"
          tabindex="0"
        >
          <div
            class="MuiCardMedia-root imageWrapper css-16cvb1l-MuiCardMedia-root"
          >
            <link
              as="image"
              fetchpriority="high"
              href="https://images.ctfassets.net/fo9qwg6zarbt/B6C4D23gXNDNfGVrxb1DK/9d8e62c1faf660f7e542eed14e044b57/biscuits.jpg?w=400&h=267&fm=webp&q=75"
              imagesrcset="https://images.ctfassets.net/fo9qwg6zarbt/B6C4D23gXNDNfGVrxb1DK/9d8e62c1faf660f7e542eed14e044b57/biscuits.jpg?w=400&h=267&fm=webp&q=75 1x, https://images.ctfassets.net/fo9qwg6zarbt/B6C4D23gXNDNfGVrxb1DK/9d8e62c1faf660f7e542eed14e044b57/biscuits.jpg?w=800&h=534&fm=webp&q=75 2x"
              media="(min-width: 987px)"
              rel="preload"
              sizes="400px"
              type="image/webp"
            />
            <link
              as="image"
              fetchpriority="high"
              href="https://images.ctfassets.net/fo9qwg6zarbt/B6C4D23gXNDNfGVrxb1DK/9d8e62c1faf660f7e542eed14e044b57/biscuits.jpg?w=400&h=267&fm=webp&q=75"
              imagesrcset="https://images.ctfassets.net/fo9qwg6zarbt/B6C4D23gXNDNfGVrxb1DK/9d8e62c1faf660f7e542eed14e044b57/biscuits.jpg?w=300&h=200&fm=webp&q=75 1x, https://images.ctfassets.net/fo9qwg6zarbt/B6C4D23gXNDNfGVrxb1DK/9d8e62c1faf660f7e542eed14e044b57/biscuits.jpg?w=600&h=400&fm=webp&q=75 2x"
              media="(min-width: 768px) and (max-width: 986px)"
              rel="preload"
              sizes="300px"
              type="image/webp"
            />
            <link
              as="image"
              fetchpriority="high"
              href="https://images.ctfassets.net/fo9qwg6zarbt/B6C4D23gXNDNfGVrxb1DK/9d8e62c1faf660f7e542eed14e044b57/biscuits.jpg?w=400&h=267&fm=webp&q=75"
              imagesrcset="https://images.ctfassets.net/fo9qwg6zarbt/B6C4D23gXNDNfGVrxb1DK/9d8e62c1faf660f7e542eed14e044b57/biscuits.jpg?w=400&h=267&fm=webp&q=75 1x, https://images.ctfassets.net/fo9qwg6zarbt/B6C4D23gXNDNfGVrxb1DK/9d8e62c1faf660f7e542eed14e044b57/biscuits.jpg?w=800&h=534&fm=webp&q=75 2x"
              media="(min-width: 668px) and (max-width: 767px)"
              rel="preload"
              sizes="400px"
              type="image/webp"
            />
            <link
              as="image"
              fetchpriority="high"
              href="https://images.ctfassets.net/fo9qwg6zarbt/B6C4D23gXNDNfGVrxb1DK/9d8e62c1faf660f7e542eed14e044b57/biscuits.jpg?w=400&h=267&fm=webp&q=75"
              imagesrcset="https://images.ctfassets.net/fo9qwg6zarbt/B6C4D23gXNDNfGVrxb1DK/9d8e62c1faf660f7e542eed14e044b57/biscuits.jpg?w=300&h=200&fm=webp&q=75 1x, https://images.ctfassets.net/fo9qwg6zarbt/B6C4D23gXNDNfGVrxb1DK/9d8e62c1faf660f7e542eed14e044b57/biscuits.jpg?w=600&h=400&fm=webp&q=75 2x"
              media="(min-width: 480px) and (max-width: 667px)"
              rel="preload"
              sizes="300px"
              type="image/webp"
            />
            <link
              as="image"
              fetchpriority="high"
              href="https://images.ctfassets.net/fo9qwg6zarbt/B6C4D23gXNDNfGVrxb1DK/9d8e62c1faf660f7e542eed14e044b57/biscuits.jpg?w=400&h=267&fm=webp&q=75"
              imagesrcset="https://images.ctfassets.net/fo9qwg6zarbt/B6C4D23gXNDNfGVrxb1DK/9d8e62c1faf660f7e542eed14e044b57/biscuits.jpg?w=500&h=334&fm=webp&q=75 1x, https://images.ctfassets.net/fo9qwg6zarbt/B6C4D23gXNDNfGVrxb1DK/9d8e62c1faf660f7e542eed14e044b57/biscuits.jpg?w=1000&h=668&fm=webp&q=75 2x"
              media="(min-width: 434px) and (max-width: 479px)"
              rel="preload"
              sizes="500px"
              type="image/webp"
            />
            <link
              as="image"
              fetchpriority="high"
              href="https://images.ctfassets.net/fo9qwg6zarbt/B6C4D23gXNDNfGVrxb1DK/9d8e62c1faf660f7e542eed14e044b57/biscuits.jpg?w=400&h=267&fm=webp&q=75"
              imagesrcset="https://images.ctfassets.net/fo9qwg6zarbt/B6C4D23gXNDNfGVrxb1DK/9d8e62c1faf660f7e542eed14e044b57/biscuits.jpg?w=400&h=267&fm=webp&q=75 1x, https://images.ctfassets.net/fo9qwg6zarbt/B6C4D23gXNDNfGVrxb1DK/9d8e62c1faf660f7e542eed14e044b57/biscuits.jpg?w=800&h=534&fm=webp&q=75 2x"
              media="(min-width: 335px) and (max-width: 433px)"
              rel="preload"
              sizes="400px"
              type="image/webp"
            />
            <link
              as="image"
              fetchpriority="high"
              href="https://images.ctfassets.net/fo9qwg6zarbt/B6C4D23gXNDNfGVrxb1DK/9d8e62c1faf660f7e542eed14e044b57/biscuits.jpg?w=400&h=267&fm=webp&q=75"
              imagesrcset="https://images.ctfassets.net/fo9qwg6zarbt/B6C4D23gXNDNfGVrxb1DK/9d8e62c1faf660f7e542eed14e044b57/biscuits.jpg?w=300&h=200&fm=webp&q=75 1x, https://images.ctfassets.net/fo9qwg6zarbt/B6C4D23gXNDNfGVrxb1DK/9d8e62c1faf660f7e542eed14e044b57/biscuits.jpg?w=600&h=400&fm=webp&q=75 2x"
              media="(max-width: 334px)"
              rel="preload"
              sizes="300px"
              type="image/webp"
            />
            <picture>
              <source
                media="(min-width: 987px)"
                sizes="400px"
                srcset="https://images.ctfassets.net/fo9qwg6zarbt/B6C4D23gXNDNfGVrxb1DK/9d8e62c1faf660f7e542eed14e044b57/biscuits.jpg?w=400&h=267&fm=webp&q=75 1x, https://images.ctfassets.net/fo9qwg6zarbt/B6C4D23gXNDNfGVrxb1DK/9d8e62c1faf660f7e542eed14e044b57/biscuits.jpg?w=800&h=534&fm=webp&q=75 2x"
              />
              <source
                media="(min-width: 768px) and (max-width: 986px)"
                sizes="300px"
                srcset="https://images.ctfassets.net/fo9qwg6zarbt/B6C4D23gXNDNfGVrxb1DK/9d8e62c1faf660f7e542eed14e044b57/biscuits.jpg?w=300&h=200&fm=webp&q=75 1x, https://images.ctfassets.net/fo9qwg6zarbt/B6C4D23gXNDNfGVrxb1DK/9d8e62c1faf660f7e542eed14e044b57/biscuits.jpg?w=600&h=400&fm=webp&q=75 2x"
              />
              <source
                media="(min-width: 668px) and (max-width: 767px)"
                sizes="400px"
                srcset="https://images.ctfassets.net/fo9qwg6zarbt/B6C4D23gXNDNfGVrxb1DK/9d8e62c1faf660f7e542eed14e044b57/biscuits.jpg?w=400&h=267&fm=webp&q=75 1x, https://images.ctfassets.net/fo9qwg6zarbt/B6C4D23gXNDNfGVrxb1DK/9d8e62c1faf660f7e542eed14e044b57/biscuits.jpg?w=800&h=534&fm=webp&q=75 2x"
              />
              <source
                media="(min-width: 480px) and (max-width: 667px)"
                sizes="300px"
                srcset="https://images.ctfassets.net/fo9qwg6zarbt/B6C4D23gXNDNfGVrxb1DK/9d8e62c1faf660f7e542eed14e044b57/biscuits.jpg?w=300&h=200&fm=webp&q=75 1x, https://images.ctfassets.net/fo9qwg6zarbt/B6C4D23gXNDNfGVrxb1DK/9d8e62c1faf660f7e542eed14e044b57/biscuits.jpg?w=600&h=400&fm=webp&q=75 2x"
              />
              <source
                media="(min-width: 434px) and (max-width: 479px)"
                sizes="500px"
                srcset="https://images.ctfassets.net/fo9qwg6zarbt/B6C4D23gXNDNfGVrxb1DK/9d8e62c1faf660f7e542eed14e044b57/biscuits.jpg?w=500&h=334&fm=webp&q=75 1x, https://images.ctfassets.net/fo9qwg6zarbt/B6C4D23gXNDNfGVrxb1DK/9d8e62c1faf660f7e542eed14e044b57/biscuits.jpg?w=1000&h=668&fm=webp&q=75 2x"
              />
              <source
                media="(min-width: 335px) and (max-width: 433px)"
                sizes="400px"
                srcset="https://images.ctfassets.net/fo9qwg6zarbt/B6C4D23gXNDNfGVrxb1DK/9d8e62c1faf660f7e542eed14e044b57/biscuits.jpg?w=400&h=267&fm=webp&q=75 1x, https://images.ctfassets.net/fo9qwg6zarbt/B6C4D23gXNDNfGVrxb1DK/9d8e62c1faf660f7e542eed14e044b57/biscuits.jpg?w=800&h=534&fm=webp&q=75 2x"
              />
              <source
                media="(max-width: 334px)"
                sizes="300px"
                srcset="https://images.ctfassets.net/fo9qwg6zarbt/B6C4D23gXNDNfGVrxb1DK/9d8e62c1faf660f7e542eed14e044b57/biscuits.jpg?w=300&h=200&fm=webp&q=75 1x, https://images.ctfassets.net/fo9qwg6zarbt/B6C4D23gXNDNfGVrxb1DK/9d8e62c1faf660f7e542eed14e044b57/biscuits.jpg?w=600&h=400&fm=webp&q=75 2x"
              />
              <img
                alt="A batch of baking soda biscuits on a parchment-lined baking sheet."
                class="dynamicImage"
                fetchpriority="high"
                height="267"
                loading="eager"
                src="https://images.ctfassets.net/fo9qwg6zarbt/B6C4D23gXNDNfGVrxb1DK/9d8e62c1faf660f7e542eed14e044b57/biscuits.jpg?w=800&h=534&fm=webp&q=75"
                width="400"
              />
            </picture>
          </div>
          <div
            class="MuiCardHeader-root css-185gdzj-MuiCardHeader-root"
          >
            <div
              class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
            >
              <span
                class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1qvr50w-MuiTypography-root"
              >
                Biscuits
              </span>
              <span
                class="MuiTypography-root MuiTypography-body1 MuiCardHeader-subheader css-nrdprl-MuiTypography-root"
              >
                Baking
              </span>
            </div>
          </div>
          <div
            class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
          >
            <p
              class="MuiTypography-root MuiTypography-body2 abstract css-e784if-MuiTypography-root"
            >
              Traditional baking powder biscuits that use grated frozen butter and folded dough to give the biscuits a soft, flaky texture.
            </p>
          </div>
          <span
            class="MuiCardActionArea-focusHighlight css-1v2exvi-MuiCardActionArea-focusHighlight"
          />
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </a>
        <div
          class="MuiCardActions-root MuiCardActions-spacing css-1t6e9jv-MuiCardActions-root"
        >
          <div
            class="tagButtons css-m69qwo-MuiStack-root"
            data-testid="tag-buttons"
          >
            <a
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall tag css-1k23hlb-MuiButtonBase-root-MuiButton-root"
              href="/tags/baking"
              role="button"
              tabindex="0"
            >
              Baking
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </a>
            <a
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall tag css-1k23hlb-MuiButtonBase-root-MuiButton-root"
              href="/tags/biscuits"
              role="button"
              tabindex="0"
            >
              Biscuits
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </a>
            <a
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall tag css-1k23hlb-MuiButtonBase-root-MuiButton-root"
              href="/tags/breakfast"
              role="button"
              tabindex="0"
            >
              Breakfast
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </a>
            <a
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall tag css-1k23hlb-MuiButtonBase-root-MuiButton-root"
              href="/tags/southern"
              role="button"
              tabindex="0"
            >
              Southern
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-4 css-11l5t4l-MuiGrid-root"
    >
      <div
        class="MuiPaper-root MuiPaper-outlined MuiPaper-rounded MuiCard-root recipe css-1v5z4dq-MuiPaper-root-MuiCard-root"
      >
        <a
          class="MuiButtonBase-root MuiCardActionArea-root css-b6lsxj-MuiButtonBase-root-MuiCardActionArea-root"
          href="/recipes/no-knead-bread"
          tabindex="0"
        >
          <div
            class="MuiCardMedia-root imageWrapper css-16cvb1l-MuiCardMedia-root"
          >
            <link
              as="image"
              fetchpriority="high"
              href="https://images.ctfassets.net/fo9qwg6zarbt/6HZDSm8AK4iQHr9v2UOGpq/17569d5be00441216338c7800e5ebc2c/no-knead-bread.JPG?w=400&h=267&fm=webp&q=75"
              imagesrcset="https://images.ctfassets.net/fo9qwg6zarbt/6HZDSm8AK4iQHr9v2UOGpq/17569d5be00441216338c7800e5ebc2c/no-knead-bread.JPG?w=400&h=267&fm=webp&q=75 1x, https://images.ctfassets.net/fo9qwg6zarbt/6HZDSm8AK4iQHr9v2UOGpq/17569d5be00441216338c7800e5ebc2c/no-knead-bread.JPG?w=800&h=534&fm=webp&q=75 2x"
              media="(min-width: 987px)"
              rel="preload"
              sizes="400px"
              type="image/webp"
            />
            <link
              as="image"
              fetchpriority="high"
              href="https://images.ctfassets.net/fo9qwg6zarbt/6HZDSm8AK4iQHr9v2UOGpq/17569d5be00441216338c7800e5ebc2c/no-knead-bread.JPG?w=400&h=267&fm=webp&q=75"
              imagesrcset="https://images.ctfassets.net/fo9qwg6zarbt/6HZDSm8AK4iQHr9v2UOGpq/17569d5be00441216338c7800e5ebc2c/no-knead-bread.JPG?w=300&h=200&fm=webp&q=75 1x, https://images.ctfassets.net/fo9qwg6zarbt/6HZDSm8AK4iQHr9v2UOGpq/17569d5be00441216338c7800e5ebc2c/no-knead-bread.JPG?w=600&h=400&fm=webp&q=75 2x"
              media="(min-width: 768px) and (max-width: 986px)"
              rel="preload"
              sizes="300px"
              type="image/webp"
            />
            <link
              as="image"
              fetchpriority="high"
              href="https://images.ctfassets.net/fo9qwg6zarbt/6HZDSm8AK4iQHr9v2UOGpq/17569d5be00441216338c7800e5ebc2c/no-knead-bread.JPG?w=400&h=267&fm=webp&q=75"
              imagesrcset="https://images.ctfassets.net/fo9qwg6zarbt/6HZDSm8AK4iQHr9v2UOGpq/17569d5be00441216338c7800e5ebc2c/no-knead-bread.JPG?w=400&h=267&fm=webp&q=75 1x, https://images.ctfassets.net/fo9qwg6zarbt/6HZDSm8AK4iQHr9v2UOGpq/17569d5be00441216338c7800e5ebc2c/no-knead-bread.JPG?w=800&h=534&fm=webp&q=75 2x"
              media="(min-width: 668px) and (max-width: 767px)"
              rel="preload"
              sizes="400px"
              type="image/webp"
            />
            <link
              as="image"
              fetchpriority="high"
              href="https://images.ctfassets.net/fo9qwg6zarbt/6HZDSm8AK4iQHr9v2UOGpq/17569d5be00441216338c7800e5ebc2c/no-knead-bread.JPG?w=400&h=267&fm=webp&q=75"
              imagesrcset="https://images.ctfassets.net/fo9qwg6zarbt/6HZDSm8AK4iQHr9v2UOGpq/17569d5be00441216338c7800e5ebc2c/no-knead-bread.JPG?w=300&h=200&fm=webp&q=75 1x, https://images.ctfassets.net/fo9qwg6zarbt/6HZDSm8AK4iQHr9v2UOGpq/17569d5be00441216338c7800e5ebc2c/no-knead-bread.JPG?w=600&h=400&fm=webp&q=75 2x"
              media="(min-width: 480px) and (max-width: 667px)"
              rel="preload"
              sizes="300px"
              type="image/webp"
            />
            <link
              as="image"
              fetchpriority="high"
              href="https://images.ctfassets.net/fo9qwg6zarbt/6HZDSm8AK4iQHr9v2UOGpq/17569d5be00441216338c7800e5ebc2c/no-knead-bread.JPG?w=400&h=267&fm=webp&q=75"
              imagesrcset="https://images.ctfassets.net/fo9qwg6zarbt/6HZDSm8AK4iQHr9v2UOGpq/17569d5be00441216338c7800e5ebc2c/no-knead-bread.JPG?w=500&h=334&fm=webp&q=75 1x, https://images.ctfassets.net/fo9qwg6zarbt/6HZDSm8AK4iQHr9v2UOGpq/17569d5be00441216338c7800e5ebc2c/no-knead-bread.JPG?w=1000&h=668&fm=webp&q=75 2x"
              media="(min-width: 434px) and (max-width: 479px)"
              rel="preload"
              sizes="500px"
              type="image/webp"
            />
            <link
              as="image"
              fetchpriority="high"
              href="https://images.ctfassets.net/fo9qwg6zarbt/6HZDSm8AK4iQHr9v2UOGpq/17569d5be00441216338c7800e5ebc2c/no-knead-bread.JPG?w=400&h=267&fm=webp&q=75"
              imagesrcset="https://images.ctfassets.net/fo9qwg6zarbt/6HZDSm8AK4iQHr9v2UOGpq/17569d5be00441216338c7800e5ebc2c/no-knead-bread.JPG?w=400&h=267&fm=webp&q=75 1x, https://images.ctfassets.net/fo9qwg6zarbt/6HZDSm8AK4iQHr9v2UOGpq/17569d5be00441216338c7800e5ebc2c/no-knead-bread.JPG?w=800&h=534&fm=webp&q=75 2x"
              media="(min-width: 335px) and (max-width: 433px)"
              rel="preload"
              sizes="400px"
              type="image/webp"
            />
            <link
              as="image"
              fetchpriority="high"
              href="https://images.ctfassets.net/fo9qwg6zarbt/6HZDSm8AK4iQHr9v2UOGpq/17569d5be00441216338c7800e5ebc2c/no-knead-bread.JPG?w=400&h=267&fm=webp&q=75"
              imagesrcset="https://images.ctfassets.net/fo9qwg6zarbt/6HZDSm8AK4iQHr9v2UOGpq/17569d5be00441216338c7800e5ebc2c/no-knead-bread.JPG?w=300&h=200&fm=webp&q=75 1x, https://images.ctfassets.net/fo9qwg6zarbt/6HZDSm8AK4iQHr9v2UOGpq/17569d5be00441216338c7800e5ebc2c/no-knead-bread.JPG?w=600&h=400&fm=webp&q=75 2x"
              media="(max-width: 334px)"
              rel="preload"
              sizes="300px"
              type="image/webp"
            />
            <picture>
              <source
                media="(min-width: 987px)"
                sizes="400px"
                srcset="https://images.ctfassets.net/fo9qwg6zarbt/6HZDSm8AK4iQHr9v2UOGpq/17569d5be00441216338c7800e5ebc2c/no-knead-bread.JPG?w=400&h=267&fm=webp&q=75 1x, https://images.ctfassets.net/fo9qwg6zarbt/6HZDSm8AK4iQHr9v2UOGpq/17569d5be00441216338c7800e5ebc2c/no-knead-bread.JPG?w=800&h=534&fm=webp&q=75 2x"
              />
              <source
                media="(min-width: 768px) and (max-width: 986px)"
                sizes="300px"
                srcset="https://images.ctfassets.net/fo9qwg6zarbt/6HZDSm8AK4iQHr9v2UOGpq/17569d5be00441216338c7800e5ebc2c/no-knead-bread.JPG?w=300&h=200&fm=webp&q=75 1x, https://images.ctfassets.net/fo9qwg6zarbt/6HZDSm8AK4iQHr9v2UOGpq/17569d5be00441216338c7800e5ebc2c/no-knead-bread.JPG?w=600&h=400&fm=webp&q=75 2x"
              />
              <source
                media="(min-width: 668px) and (max-width: 767px)"
                sizes="400px"
                srcset="https://images.ctfassets.net/fo9qwg6zarbt/6HZDSm8AK4iQHr9v2UOGpq/17569d5be00441216338c7800e5ebc2c/no-knead-bread.JPG?w=400&h=267&fm=webp&q=75 1x, https://images.ctfassets.net/fo9qwg6zarbt/6HZDSm8AK4iQHr9v2UOGpq/17569d5be00441216338c7800e5ebc2c/no-knead-bread.JPG?w=800&h=534&fm=webp&q=75 2x"
              />
              <source
                media="(min-width: 480px) and (max-width: 667px)"
                sizes="300px"
                srcset="https://images.ctfassets.net/fo9qwg6zarbt/6HZDSm8AK4iQHr9v2UOGpq/17569d5be00441216338c7800e5ebc2c/no-knead-bread.JPG?w=300&h=200&fm=webp&q=75 1x, https://images.ctfassets.net/fo9qwg6zarbt/6HZDSm8AK4iQHr9v2UOGpq/17569d5be00441216338c7800e5ebc2c/no-knead-bread.JPG?w=600&h=400&fm=webp&q=75 2x"
              />
              <source
                media="(min-width: 434px) and (max-width: 479px)"
                sizes="500px"
                srcset="https://images.ctfassets.net/fo9qwg6zarbt/6HZDSm8AK4iQHr9v2UOGpq/17569d5be00441216338c7800e5ebc2c/no-knead-bread.JPG?w=500&h=334&fm=webp&q=75 1x, https://images.ctfassets.net/fo9qwg6zarbt/6HZDSm8AK4iQHr9v2UOGpq/17569d5be00441216338c7800e5ebc2c/no-knead-bread.JPG?w=1000&h=668&fm=webp&q=75 2x"
              />
              <source
                media="(min-width: 335px) and (max-width: 433px)"
                sizes="400px"
                srcset="https://images.ctfassets.net/fo9qwg6zarbt/6HZDSm8AK4iQHr9v2UOGpq/17569d5be00441216338c7800e5ebc2c/no-knead-bread.JPG?w=400&h=267&fm=webp&q=75 1x, https://images.ctfassets.net/fo9qwg6zarbt/6HZDSm8AK4iQHr9v2UOGpq/17569d5be00441216338c7800e5ebc2c/no-knead-bread.JPG?w=800&h=534&fm=webp&q=75 2x"
              />
              <source
                media="(max-width: 334px)"
                sizes="300px"
                srcset="https://images.ctfassets.net/fo9qwg6zarbt/6HZDSm8AK4iQHr9v2UOGpq/17569d5be00441216338c7800e5ebc2c/no-knead-bread.JPG?w=300&h=200&fm=webp&q=75 1x, https://images.ctfassets.net/fo9qwg6zarbt/6HZDSm8AK4iQHr9v2UOGpq/17569d5be00441216338c7800e5ebc2c/no-knead-bread.JPG?w=600&h=400&fm=webp&q=75 2x"
              />
              <img
                alt="Loaf of no-knead bread cooling on a wire baking rack."
                class="dynamicImage"
                fetchpriority="high"
                height="267"
                loading="eager"
                src="https://images.ctfassets.net/fo9qwg6zarbt/6HZDSm8AK4iQHr9v2UOGpq/17569d5be00441216338c7800e5ebc2c/no-knead-bread.JPG?w=800&h=534&fm=webp&q=75"
                width="400"
              />
            </picture>
          </div>
          <div
            class="MuiCardHeader-root css-185gdzj-MuiCardHeader-root"
          >
            <div
              class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
            >
              <span
                class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1qvr50w-MuiTypography-root"
              >
                No-Knead Bread
              </span>
              <span
                class="MuiTypography-root MuiTypography-body1 MuiCardHeader-subheader css-nrdprl-MuiTypography-root"
              >
                Baking
              </span>
            </div>
          </div>
          <div
            class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
          >
            <p
              class="MuiTypography-root MuiTypography-body2 abstract css-e784if-MuiTypography-root"
            >
              No-knead bread using instant yeast and a dutch oven or covered ceramic bread pan for a classic, crispy crust.
            </p>
          </div>
          <span
            class="MuiCardActionArea-focusHighlight css-1v2exvi-MuiCardActionArea-focusHighlight"
          />
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </a>
        <div
          class="MuiCardActions-root MuiCardActions-spacing css-1t6e9jv-MuiCardActions-root"
        >
          <div
            class="tagButtons css-m69qwo-MuiStack-root"
            data-testid="tag-buttons"
          >
            <a
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall tag css-1k23hlb-MuiButtonBase-root-MuiButton-root"
              href="/tags/baking"
              role="button"
              tabindex="0"
            >
              Baking
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </a>
            <a
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall tag css-1k23hlb-MuiButtonBase-root-MuiButton-root"
              href="/tags/bread"
              role="button"
              tabindex="0"
            >
              Bread
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-4 css-11l5t4l-MuiGrid-root"
    >
      <div
        class="MuiPaper-root MuiPaper-outlined MuiPaper-rounded MuiCard-root recipe css-1v5z4dq-MuiPaper-root-MuiCard-root"
      >
        <a
          class="MuiButtonBase-root MuiCardActionArea-root css-b6lsxj-MuiButtonBase-root-MuiCardActionArea-root"
          href="/recipes/no-knead-olive-bread"
          tabindex="0"
        >
          <div
            class="MuiCardMedia-root imageWrapper css-16cvb1l-MuiCardMedia-root"
          >
            <link
              as="image"
              fetchpriority="high"
              href="https://images.ctfassets.net/fo9qwg6zarbt/2rUa4IhfkLtRRBmHS6ihcD/e953337e00d1eba9551b15e7eee18229/olive-bread.JPG?w=400&h=267&fm=webp&q=75"
              imagesrcset="https://images.ctfassets.net/fo9qwg6zarbt/2rUa4IhfkLtRRBmHS6ihcD/e953337e00d1eba9551b15e7eee18229/olive-bread.JPG?w=400&h=267&fm=webp&q=75 1x, https://images.ctfassets.net/fo9qwg6zarbt/2rUa4IhfkLtRRBmHS6ihcD/e953337e00d1eba9551b15e7eee18229/olive-bread.JPG?w=800&h=534&fm=webp&q=75 2x"
              media="(min-width: 987px)"
              rel="preload"
              sizes="400px"
              type="image/webp"
            />
            <link
              as="image"
              fetchpriority="high"
              href="https://images.ctfassets.net/fo9qwg6zarbt/2rUa4IhfkLtRRBmHS6ihcD/e953337e00d1eba9551b15e7eee18229/olive-bread.JPG?w=400&h=267&fm=webp&q=75"
              imagesrcset="https://images.ctfassets.net/fo9qwg6zarbt/2rUa4IhfkLtRRBmHS6ihcD/e953337e00d1eba9551b15e7eee18229/olive-bread.JPG?w=300&h=200&fm=webp&q=75 1x, https://images.ctfassets.net/fo9qwg6zarbt/2rUa4IhfkLtRRBmHS6ihcD/e953337e00d1eba9551b15e7eee18229/olive-bread.JPG?w=600&h=400&fm=webp&q=75 2x"
              media="(min-width: 768px) and (max-width: 986px)"
              rel="preload"
              sizes="300px"
              type="image/webp"
            />
            <link
              as="image"
              fetchpriority="high"
              href="https://images.ctfassets.net/fo9qwg6zarbt/2rUa4IhfkLtRRBmHS6ihcD/e953337e00d1eba9551b15e7eee18229/olive-bread.JPG?w=400&h=267&fm=webp&q=75"
              imagesrcset="https://images.ctfassets.net/fo9qwg6zarbt/2rUa4IhfkLtRRBmHS6ihcD/e953337e00d1eba9551b15e7eee18229/olive-bread.JPG?w=400&h=267&fm=webp&q=75 1x, https://images.ctfassets.net/fo9qwg6zarbt/2rUa4IhfkLtRRBmHS6ihcD/e953337e00d1eba9551b15e7eee18229/olive-bread.JPG?w=800&h=534&fm=webp&q=75 2x"
              media="(min-width: 668px) and (max-width: 767px)"
              rel="preload"
              sizes="400px"
              type="image/webp"
            />
            <link
              as="image"
              fetchpriority="high"
              href="https://images.ctfassets.net/fo9qwg6zarbt/2rUa4IhfkLtRRBmHS6ihcD/e953337e00d1eba9551b15e7eee18229/olive-bread.JPG?w=400&h=267&fm=webp&q=75"
              imagesrcset="https://images.ctfassets.net/fo9qwg6zarbt/2rUa4IhfkLtRRBmHS6ihcD/e953337e00d1eba9551b15e7eee18229/olive-bread.JPG?w=300&h=200&fm=webp&q=75 1x, https://images.ctfassets.net/fo9qwg6zarbt/2rUa4IhfkLtRRBmHS6ihcD/e953337e00d1eba9551b15e7eee18229/olive-bread.JPG?w=600&h=400&fm=webp&q=75 2x"
              media="(min-width: 480px) and (max-width: 667px)"
              rel="preload"
              sizes="300px"
              type="image/webp"
            />
            <link
              as="image"
              fetchpriority="high"
              href="https://images.ctfassets.net/fo9qwg6zarbt/2rUa4IhfkLtRRBmHS6ihcD/e953337e00d1eba9551b15e7eee18229/olive-bread.JPG?w=400&h=267&fm=webp&q=75"
              imagesrcset="https://images.ctfassets.net/fo9qwg6zarbt/2rUa4IhfkLtRRBmHS6ihcD/e953337e00d1eba9551b15e7eee18229/olive-bread.JPG?w=500&h=334&fm=webp&q=75 1x, https://images.ctfassets.net/fo9qwg6zarbt/2rUa4IhfkLtRRBmHS6ihcD/e953337e00d1eba9551b15e7eee18229/olive-bread.JPG?w=1000&h=668&fm=webp&q=75 2x"
              media="(min-width: 434px) and (max-width: 479px)"
              rel="preload"
              sizes="500px"
              type="image/webp"
            />
            <link
              as="image"
              fetchpriority="high"
              href="https://images.ctfassets.net/fo9qwg6zarbt/2rUa4IhfkLtRRBmHS6ihcD/e953337e00d1eba9551b15e7eee18229/olive-bread.JPG?w=400&h=267&fm=webp&q=75"
              imagesrcset="https://images.ctfassets.net/fo9qwg6zarbt/2rUa4IhfkLtRRBmHS6ihcD/e953337e00d1eba9551b15e7eee18229/olive-bread.JPG?w=400&h=267&fm=webp&q=75 1x, https://images.ctfassets.net/fo9qwg6zarbt/2rUa4IhfkLtRRBmHS6ihcD/e953337e00d1eba9551b15e7eee18229/olive-bread.JPG?w=800&h=534&fm=webp&q=75 2x"
              media="(min-width: 335px) and (max-width: 433px)"
              rel="preload"
              sizes="400px"
              type="image/webp"
            />
            <link
              as="image"
              fetchpriority="high"
              href="https://images.ctfassets.net/fo9qwg6zarbt/2rUa4IhfkLtRRBmHS6ihcD/e953337e00d1eba9551b15e7eee18229/olive-bread.JPG?w=400&h=267&fm=webp&q=75"
              imagesrcset="https://images.ctfassets.net/fo9qwg6zarbt/2rUa4IhfkLtRRBmHS6ihcD/e953337e00d1eba9551b15e7eee18229/olive-bread.JPG?w=300&h=200&fm=webp&q=75 1x, https://images.ctfassets.net/fo9qwg6zarbt/2rUa4IhfkLtRRBmHS6ihcD/e953337e00d1eba9551b15e7eee18229/olive-bread.JPG?w=600&h=400&fm=webp&q=75 2x"
              media="(max-width: 334px)"
              rel="preload"
              sizes="300px"
              type="image/webp"
            />
            <picture>
              <source
                media="(min-width: 987px)"
                sizes="400px"
                srcset="https://images.ctfassets.net/fo9qwg6zarbt/2rUa4IhfkLtRRBmHS6ihcD/e953337e00d1eba9551b15e7eee18229/olive-bread.JPG?w=400&h=267&fm=webp&q=75 1x, https://images.ctfassets.net/fo9qwg6zarbt/2rUa4IhfkLtRRBmHS6ihcD/e953337e00d1eba9551b15e7eee18229/olive-bread.JPG?w=800&h=534&fm=webp&q=75 2x"
              />
              <source
                media="(min-width: 768px) and (max-width: 986px)"
                sizes="300px"
                srcset="https://images.ctfassets.net/fo9qwg6zarbt/2rUa4IhfkLtRRBmHS6ihcD/e953337e00d1eba9551b15e7eee18229/olive-bread.JPG?w=300&h=200&fm=webp&q=75 1x, https://images.ctfassets.net/fo9qwg6zarbt/2rUa4IhfkLtRRBmHS6ihcD/e953337e00d1eba9551b15e7eee18229/olive-bread.JPG?w=600&h=400&fm=webp&q=75 2x"
              />
              <source
                media="(min-width: 668px) and (max-width: 767px)"
                sizes="400px"
                srcset="https://images.ctfassets.net/fo9qwg6zarbt/2rUa4IhfkLtRRBmHS6ihcD/e953337e00d1eba9551b15e7eee18229/olive-bread.JPG?w=400&h=267&fm=webp&q=75 1x, https://images.ctfassets.net/fo9qwg6zarbt/2rUa4IhfkLtRRBmHS6ihcD/e953337e00d1eba9551b15e7eee18229/olive-bread.JPG?w=800&h=534&fm=webp&q=75 2x"
              />
              <source
                media="(min-width: 480px) and (max-width: 667px)"
                sizes="300px"
                srcset="https://images.ctfassets.net/fo9qwg6zarbt/2rUa4IhfkLtRRBmHS6ihcD/e953337e00d1eba9551b15e7eee18229/olive-bread.JPG?w=300&h=200&fm=webp&q=75 1x, https://images.ctfassets.net/fo9qwg6zarbt/2rUa4IhfkLtRRBmHS6ihcD/e953337e00d1eba9551b15e7eee18229/olive-bread.JPG?w=600&h=400&fm=webp&q=75 2x"
              />
              <source
                media="(min-width: 434px) and (max-width: 479px)"
                sizes="500px"
                srcset="https://images.ctfassets.net/fo9qwg6zarbt/2rUa4IhfkLtRRBmHS6ihcD/e953337e00d1eba9551b15e7eee18229/olive-bread.JPG?w=500&h=334&fm=webp&q=75 1x, https://images.ctfassets.net/fo9qwg6zarbt/2rUa4IhfkLtRRBmHS6ihcD/e953337e00d1eba9551b15e7eee18229/olive-bread.JPG?w=1000&h=668&fm=webp&q=75 2x"
              />
              <source
                media="(min-width: 335px) and (max-width: 433px)"
                sizes="400px"
                srcset="https://images.ctfassets.net/fo9qwg6zarbt/2rUa4IhfkLtRRBmHS6ihcD/e953337e00d1eba9551b15e7eee18229/olive-bread.JPG?w=400&h=267&fm=webp&q=75 1x, https://images.ctfassets.net/fo9qwg6zarbt/2rUa4IhfkLtRRBmHS6ihcD/e953337e00d1eba9551b15e7eee18229/olive-bread.JPG?w=800&h=534&fm=webp&q=75 2x"
              />
              <source
                media="(max-width: 334px)"
                sizes="300px"
                srcset="https://images.ctfassets.net/fo9qwg6zarbt/2rUa4IhfkLtRRBmHS6ihcD/e953337e00d1eba9551b15e7eee18229/olive-bread.JPG?w=300&h=200&fm=webp&q=75 1x, https://images.ctfassets.net/fo9qwg6zarbt/2rUa4IhfkLtRRBmHS6ihcD/e953337e00d1eba9551b15e7eee18229/olive-bread.JPG?w=600&h=400&fm=webp&q=75 2x"
              />
              <img
                alt="Loaf of no-knead olive bread"
                class="dynamicImage"
                fetchpriority="high"
                height="267"
                loading="eager"
                src="https://images.ctfassets.net/fo9qwg6zarbt/2rUa4IhfkLtRRBmHS6ihcD/e953337e00d1eba9551b15e7eee18229/olive-bread.JPG?w=800&h=534&fm=webp&q=75"
                width="400"
              />
            </picture>
          </div>
          <div
            class="MuiCardHeader-root css-185gdzj-MuiCardHeader-root"
          >
            <div
              class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
            >
              <span
                class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1qvr50w-MuiTypography-root"
              >
                No-Knead Olive Bread
              </span>
              <span
                class="MuiTypography-root MuiTypography-body1 MuiCardHeader-subheader css-nrdprl-MuiTypography-root"
              >
                Baking
              </span>
            </div>
          </div>
          <div
            class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
          >
            <p
              class="MuiTypography-root MuiTypography-body2 abstract css-e784if-MuiTypography-root"
            >
              A savory variation of no-knead bread with the addition of olives, garlic, and rosemary to give it a Mediterranean twist.
            </p>
          </div>
          <span
            class="MuiCardActionArea-focusHighlight css-1v2exvi-MuiCardActionArea-focusHighlight"
          />
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </a>
        <div
          class="MuiCardActions-root MuiCardActions-spacing css-1t6e9jv-MuiCardActions-root"
        >
          <div
            class="tagButtons css-m69qwo-MuiStack-root"
            data-testid="tag-buttons"
          >
            <a
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall tag css-1k23hlb-MuiButtonBase-root-MuiButton-root"
              href="/tags/baking"
              role="button"
              tabindex="0"
            >
              Baking
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </a>
            <a
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall tag css-1k23hlb-MuiButtonBase-root-MuiButton-root"
              href="/tags/bread"
              role="button"
              tabindex="0"
            >
              Bread
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </a>
            <a
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall tag css-1k23hlb-MuiButtonBase-root-MuiButton-root"
              href="/tags/olives"
              role="button"
              tabindex="0"
            >
              Olives
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </a>
            <a
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall tag css-1k23hlb-MuiButtonBase-root-MuiButton-root"
              href="/tags/mediterranean"
              role="button"
              tabindex="0"
            >
              Mediterranean
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
